tests/agl/rejections/scope/wildcard_binder_unreadable.agl
let _ = "discarded"
print _
